inventory/rules/inventory-default.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: inventory-default
spec:
  hosts:
  - "istio-ingressgateway-user16-istio-system.apps.cluster-ccnr-c36e.ccnr-c36e.sandbox1073.opentlc.com"
  gateways:
  - user16-bookinfo/bookinfo-gateway
  http:
    - match:
        - uri:
            exact: /services/inventory
        - uri:
            exact: /
      route:
        - destination:
            host: inventory
            port:
              number: 8080
