inventory/rules/inventory-vs-fault-delay.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: inventory-fault-delay
spec:
  hosts:
  - "istio-ingressgateway-user16-istio-system.apps.cluster-ccnr-c36e.ccnr-c36e.sandbox1073.opentlc.com"
  gateways:
  - user16-bookinfo/bookinfo-gateway
  http:
    - fault:
         delay:
           fixedDelay: 5s
           percentage:
             value: 100
      route:
        - destination:
            host: inventory
            port:
              number: 8080
