inventory/rules/inventory-vs-fault.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: inventory-fault
spec:
  hosts:
  - "istio-ingressgateway-user16-istio-system.apps.cluster-ccnr-c36e.ccnr-c36e.sandbox1073.opentlc.com"
  gateways:
  - user16-bookinfo/bookinfo-gateway
  http:
    - fault:
         abort:
           httpStatus: 500
           percentage:
             value: 50
      route:
        - destination:
            host: inventory
            port:
              number: 8080
